--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,6 @@
     <title>Animal Info</title>
 </head>
 <body>
-    <img src="https://www.sexhoundlinks.com/xth/Mm/714003.jpg" alt=""width = "2000px" height = "750px">
+    <img src="electric-chair-gifs" alt=""width = "2000px" height = "750px">
 </body>
 </html>
