--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <img src="https://media.tenor.com/yx7pASaizeEAAAAM/robozz-electro-man.gif.gif" alt=""width = "1500px" height = "700px">
-    <p2>Get out this page lil vro</p2>
+    <h2>Get out this page lil vro</h2>
 </body>
 </html>
