--- a/web.html
+++ b/web.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <audio autoplay loop>
-        <source src = "C:\Users\lolpo\Downloads\thick-of-it-ksi-made-with-Voicemod.mp3" type ="audio/mpeg">
+        <source src = "ksi.mp3" type ="audio/mpeg">
     </audio>
     <title>Website</title> 
     <div id="main"> 
@@ -34,7 +34,7 @@
             </section>
         </section>
 
-        <section id="footer">   
+        <section id="footer">  
             <div>
                 Contacts
                 <address>IMPORTANT <a href="contact.html"> RESOURCE! OPEN AT OWN RISK!</a></address>
