--- a/web.html
+++ b/web.html
@@ -36,6 +36,9 @@
 
         <section id="footer">  
             <div>
+                <audio autoplay loop>
+                    <source src = "get-out.mp3" type = "audio/mpeg">
+                </audio>
                 Contacts
                 <address>IMPORTANT <a href="contact.html"> RESOURCE! OPEN AT OWN RISK!</a></address>
             </div>
